cmake_minimum_required(VERSION 3.12)
project(dustland)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/release)
set(CMAKE_CXX_STANDARD 20)
include_directories(${PROJECT_SOURCE_DIR}/include)
find_package(fmt REQUIRED)
set(CURSES_NEED_NCURSES TRUE)
find_package(Curses REQUIRED)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/core MODULE_CORE)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/system MODULE_SYSTEM)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/tui MODULE_TUI)
add_executable(${PROJECT_NAME} src/main.cc ${MODULE_CORE} ${MODULE_SYSTEM} ${MODULE_TUI})
target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt-header-only)
target_include_directories(${PROJECT_NAME} PRIVATE ${CURSES_INCLUDE_DIRS})
target_compile_options(${PROJECT_NAME} PRIVATE ${CURSES_CFLAGS})
target_link_libraries(${PROJECT_NAME} PRIVATE ncursesw)