cmake_minimum_required(VERSION 3.12)
project(dustland)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 20)
set(ROOT_PROJECT_NAME ${PROJECT_NAME})
include(tools/filesystem.cmake)
include_directories(${PROJECT_SOURCE_DIR}/packages)
ListDirectories(packages ${PROJECT_SOURCE_DIR}/packages)
add_subdirectory(packages)
add_executable(${PROJECT_NAME}.exec main.cc)

foreach(package ${packages})
    message(STATUS "link package ${package}")
    target_link_libraries(${PROJECT_NAME}.exec ${ROOT_PROJECT_NAME}.${package})
endforeach()

target_link_libraries(${PROJECT_NAME}.exec ncursesw)
target_link_libraries(${PROJECT_NAME}.exec cjson)
target_link_libraries(${PROJECT_NAME}.exec lua5.1)