cmake_minimum_required(VERSION 3.12)
project(dustland)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 20)
set(ROOT_PROJECT_NAME ${PROJECT_NAME})
include(tools/filesystem.cmake)
include_directories(${PROJECT_SOURCE_DIR}/packages)
ListDirectories(packages ${PROJECT_SOURCE_DIR}/packages)
add_subdirectory(packages)
add_subdirectory(projects)